[gd_scene load_steps=24 format=3 uid="uid://ctaeg60vimnlh"]

[ext_resource type="Script" uid="uid://bi03uqtchp46e" path="res://UI/hud.gd" id="1_7i7fj"]
[ext_resource type="Texture2D" uid="uid://bt1u3xtfej64n" path="res://images/image_act.png" id="1_ktti3"]
[ext_resource type="Texture2D" uid="uid://bvtqpr1hb2ewx" path="res://images/image_run.png" id="2_cgfq5"]
[ext_resource type="Texture2D" uid="uid://4leq60s6j6fn" path="res://images/image_face.png" id="3_7dvkv"]
[ext_resource type="Texture2D" uid="uid://cspqdahswwlw1" path="res://Graphics/icons/icons_Drill.png" id="5_8ip7y"]
[ext_resource type="Texture2D" uid="uid://dil2qipyuukv5" path="res://Graphics/icons/icons_BigDrill.png" id="6_likdy"]
[ext_resource type="Texture2D" uid="uid://dsbxfs0kqd5t3" path="res://Graphics/icons/icons_DrillSmash.png" id="7_pgems"]
[ext_resource type="Texture2D" uid="uid://bmtdje21c1ggw" path="res://images/button_endturn.png" id="7_vdcm2"]
[ext_resource type="Texture2D" uid="uid://deipnk3fe2cb6" path="res://Graphics/icons/icons_ChargeAttack.png" id="8_rsrlt"]
[ext_resource type="Texture2D" uid="uid://b4iyjo4f2mbc6" path="res://Graphics/icons/icons_Defend.png" id="9_lbtxw"]
[ext_resource type="Texture2D" uid="uid://cmav0p5fvpob8" path="res://Graphics/icons/icons_LineShot.png" id="10_gp2h7"]
[ext_resource type="Texture2D" uid="uid://05h780u35qn" path="res://Graphics/icons/icons_Cloak.png" id="11_4hs1h"]
[ext_resource type="Texture2D" uid="uid://swai2io5n363" path="res://Graphics/icons/icons_Fireball.png" id="12_dcyds"]
[ext_resource type="Texture2D" uid="uid://di1peovfwbdb" path="res://Graphics/icons/icons_Healing.png" id="13_rc7pm"]
[ext_resource type="Texture2D" uid="uid://bs1nuen0bekx5" path="res://Graphics/icons/icons_Freeze.png" id="14_h8urj"]
[ext_resource type="Texture2D" uid="uid://5vduiqm2hox1" path="res://Graphics/icons/icons_Poison.png" id="15_ghl3h"]
[ext_resource type="Texture2D" uid="uid://b72xk74n6nnap" path="res://Graphics/icons/icons_Teleport.png" id="16_qbvrm"]

[sub_resource type="Curve" id="Curve_scale"]
_data = [Vector2(0, 0.4), 0.0, 1.8, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.4), -1.8, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_qy6c4"]
offsets = PackedFloat32Array(0, 0.3, 0.7, 1)
colors = PackedColorArray(0.921569, 0.878431, 0.34902, 0, 0.921569, 0.878431, 0.34902, 0.6, 1, 0.945098, 0.490196, 0.8, 0.921569, 0.878431, 0.34902, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_md4fy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7i7fj"]
bg_color = Color(0.960784, 0.0745098, 0.137255, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2r41h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rbci0"]

[node name="ui" type="CanvasLayer"]
script = ExtResource("1_7i7fj")

[node name="MenuMargin" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -307.0
offset_bottom = 55.0
grow_horizontal = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MenuMargin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ButtonUpgrade" type="Button" parent="MenuMargin/HBoxContainer"]
custom_minimum_size = Vector2(135, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Upgrades"

[node name="GlowEffect" type="CPUParticles2D" parent="MenuMargin/HBoxContainer/ButtonUpgrade"]
show_behind_parent = true
position = Vector2(67.5, 22.5)
amount = 32
lifetime = 1.5
preprocess = 1.0
speed_scale = 0.7
randomness = 0.3
lifetime_randomness = 0.2
local_coords = true
emission_shape = 3
emission_rect_extents = Vector2(70, 28)
spread = 5.0
gravity = Vector2(0, 0)
angular_velocity_min = -15.0
angular_velocity_max = 15.0
orbit_velocity_min = -0.05
orbit_velocity_max = 0.05
scale_amount_min = 15.0
scale_amount_max = 25.0
scale_amount_curve = SubResource("Curve_scale")
color_ramp = SubResource("Gradient_qy6c4")

[node name="ButtonMenu" type="Button" parent="MenuMargin/HBoxContainer"]
custom_minimum_size = Vector2(135, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Menu"

[node name="Info" type="PanelContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -68.0
offset_right = 64.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_md4fy")

[node name="InfoMargin" type="MarginContainer" parent="Info"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="InfoVBox" type="VBoxContainer" parent="Info/InfoMargin"]
layout_mode = 2

[node name="ActHBox" type="HBoxContainer" parent="Info/InfoMargin/InfoVBox"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TextureRect" type="TextureRect" parent="Info/InfoMargin/InfoVBox/ActHBox"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("1_ktti3")
expand_mode = 2

[node name="ColorRect6" type="ColorRect" parent="Info/InfoMargin/InfoVBox/ActHBox"]
custom_minimum_size = Vector2(15, 40)
layout_mode = 2
color = Color(0.749751, 0.731299, 0.045859, 1)

[node name="ColorRect7" type="ColorRect" parent="Info/InfoMargin/InfoVBox/ActHBox"]
custom_minimum_size = Vector2(15, 40)
layout_mode = 2
color = Color(0.749751, 0.731299, 0.045859, 1)

[node name="ColorRect8" type="ColorRect" parent="Info/InfoMargin/InfoVBox/ActHBox"]
custom_minimum_size = Vector2(15, 40)
layout_mode = 2
color = Color(0.749751, 0.731299, 0.045859, 1)

[node name="ColorRect9" type="ColorRect" parent="Info/InfoMargin/InfoVBox/ActHBox"]
custom_minimum_size = Vector2(15, 40)
layout_mode = 2
color = Color(0.749751, 0.731299, 0.045859, 1)

[node name="ColorRect10" type="ColorRect" parent="Info/InfoMargin/InfoVBox/ActHBox"]
custom_minimum_size = Vector2(15, 40)
layout_mode = 2
color = Color(0.749751, 0.731299, 0.045859, 1)

[node name="ColorRect11" type="ColorRect" parent="Info/InfoMargin/InfoVBox/ActHBox"]
custom_minimum_size = Vector2(15, 40)
layout_mode = 2
color = Color(0.749751, 0.731299, 0.045859, 1)

[node name="ColorRect12" type="ColorRect" parent="Info/InfoMargin/InfoVBox/ActHBox"]
custom_minimum_size = Vector2(15, 40)
layout_mode = 2
color = Color(0.749751, 0.731299, 0.045859, 1)

[node name="ColorRect13" type="ColorRect" parent="Info/InfoMargin/InfoVBox/ActHBox"]
custom_minimum_size = Vector2(15, 40)
layout_mode = 2
color = Color(0.749751, 0.731299, 0.045859, 1)

[node name="MoveHBox" type="HBoxContainer" parent="Info/InfoMargin/InfoVBox"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TextureRect" type="TextureRect" parent="Info/InfoMargin/InfoVBox/MoveHBox"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("2_cgfq5")
expand_mode = 2

[node name="ColorRect" type="ColorRect" parent="Info/InfoMargin/InfoVBox/MoveHBox"]
custom_minimum_size = Vector2(15, 40)
layout_mode = 2
color = Color(0.348878, 0.504725, 1, 1)

[node name="ColorRect2" type="ColorRect" parent="Info/InfoMargin/InfoVBox/MoveHBox"]
custom_minimum_size = Vector2(15, 40)
layout_mode = 2
color = Color(0.348878, 0.504725, 1, 1)

[node name="ColorRect3" type="ColorRect" parent="Info/InfoMargin/InfoVBox/MoveHBox"]
custom_minimum_size = Vector2(15, 40)
layout_mode = 2
color = Color(0.348878, 0.504725, 1, 1)

[node name="ColorRect4" type="ColorRect" parent="Info/InfoMargin/InfoVBox/MoveHBox"]
custom_minimum_size = Vector2(15, 40)
layout_mode = 2
color = Color(0.348878, 0.504725, 1, 1)

[node name="ColorRect5" type="ColorRect" parent="Info/InfoMargin/InfoVBox/MoveHBox"]
custom_minimum_size = Vector2(15, 40)
layout_mode = 2
color = Color(0.348878, 0.504725, 1, 1)

[node name="ColorRect6" type="ColorRect" parent="Info/InfoMargin/InfoVBox/MoveHBox"]
custom_minimum_size = Vector2(15, 40)
layout_mode = 2
color = Color(0.348878, 0.504725, 1, 1)

[node name="ColorRect7" type="ColorRect" parent="Info/InfoMargin/InfoVBox/MoveHBox"]
custom_minimum_size = Vector2(15, 40)
layout_mode = 2
color = Color(0.348878, 0.504725, 1, 1)

[node name="ColorRect8" type="ColorRect" parent="Info/InfoMargin/InfoVBox/MoveHBox"]
custom_minimum_size = Vector2(15, 40)
layout_mode = 2
color = Color(0.348878, 0.504725, 1, 1)

[node name="CharImage" type="TextureRect" parent="Info/InfoMargin/InfoVBox"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture = ExtResource("3_7dvkv")
expand_mode = 4

[node name="HealthBar" type="ProgressBar" parent="Info/InfoMargin/InfoVBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_7i7fj")
value = 100.0
show_percentage = false

[node name="Action" type="PanelContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -106.0
offset_top = -68.0
offset_right = 106.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_2r41h")

[node name="ActionMargin" type="MarginContainer" parent="Action"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ActionHBox" type="HBoxContainer" parent="Action/ActionMargin"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 10

[node name="ActionDrill" type="TextureButton" parent="Action/ActionMargin/ActionHBox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_8ip7y")
ignore_texture_size = true
stretch_mode = 0

[node name="ActionBigDrill" type="TextureButton" parent="Action/ActionMargin/ActionHBox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("6_likdy")
ignore_texture_size = true
stretch_mode = 0

[node name="ActionDrillSmash" type="TextureButton" parent="Action/ActionMargin/ActionHBox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("7_pgems")
ignore_texture_size = true
stretch_mode = 0

[node name="ActionChargeAttack" type="TextureButton" parent="Action/ActionMargin/ActionHBox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("8_rsrlt")
ignore_texture_size = true
stretch_mode = 0

[node name="ActionDefend" type="TextureButton" parent="Action/ActionMargin/ActionHBox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("9_lbtxw")
ignore_texture_size = true
stretch_mode = 0

[node name="ActionLineShot" type="TextureButton" parent="Action/ActionMargin/ActionHBox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("10_gp2h7")
ignore_texture_size = true
stretch_mode = 0

[node name="ActionCloak" type="TextureButton" parent="Action/ActionMargin/ActionHBox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("11_4hs1h")
ignore_texture_size = true
stretch_mode = 0

[node name="ActionFireball" type="TextureButton" parent="Action/ActionMargin/ActionHBox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("12_dcyds")
ignore_texture_size = true
stretch_mode = 0

[node name="ActionHealingAOE" type="TextureButton" parent="Action/ActionMargin/ActionHBox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("13_rc7pm")
ignore_texture_size = true
stretch_mode = 0

[node name="ActionFreezeAOE" type="TextureButton" parent="Action/ActionMargin/ActionHBox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("14_h8urj")
ignore_texture_size = true
stretch_mode = 0

[node name="ActionPoisonAOE" type="TextureButton" parent="Action/ActionMargin/ActionHBox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("15_ghl3h")
ignore_texture_size = true
stretch_mode = 0

[node name="ActionEmergencyTeleport" type="TextureButton" parent="Action/ActionMargin/ActionHBox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("16_qbvrm")
ignore_texture_size = true
stretch_mode = 0

[node name="End" type="PanelContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_rbci0")

[node name="EndMargin" type="MarginContainer" parent="End"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="EndButton" type="TextureButton" parent="End/EndMargin"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture_normal = ExtResource("7_vdcm2")
stretch_mode = 0

[node name="DrillIndicator" type="PanelContainer" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_right = 150.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="DrillLabel" type="Label" parent="DrillIndicator"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 24
text = "DRILLING: 2 turns left"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MenuMargin/HBoxContainer/ButtonUpgrade" to="." method="_on_button_upgrade_pressed"]
[connection signal="pressed" from="MenuMargin/HBoxContainer/ButtonMenu" to="." method="_on_button_menu_pressed"]
